style.css
*{
    box-sizing: border-box;
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

body{
    font-size: 12px;
    max-width: 1300px;
    margin: 0 auto;
}

header{
    width: 100%;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 150px;
}
h1{
    color: #D04F4F;
    font-size: 2em;
    margin-top: -20px;
}
.hide{
    display: none;
}
#search-bar{
    width: 100%;
    margin: 0 auto;
    display: flex;
}
#search-bar__input{
    background-color: #E7E7E7;
    border: none;
    flex-grow: 1;
    padding-left: 5px;
}
#search-bar__icon{
    background-color: #E7E7E7;
    border: none;
    padding: 5px;
}
#keywords{
    width: 100%;
    margin: 20px auto;
    height: auto;
    display: flex;
}
.ingredient-keyword-thumb{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 10px;
    color: white;
    background-color: #3282F7;
    margin: 0 10px 10px 0;
    border-radius: 5px;
}
.ingredient-keyword-thumb>span{
    display: flex;
}
.appareil-keyword-thumb{
    display: flex;
    align-items: center;
    padding: 10px;
    color: white;
    background-color: #68D9A4;
    margin: 0 10px 10px 0;
    border-radius: 5px;
}
.appareil-keyword-thumb > span{
    display: flex;
}
.ustensil-keyword-thumb{
    display: flex;
    align-items: center;
    padding: 10px;
    color: white;
    background-color: #ED6454;
    margin: 0 10px 10px 0;
    border-radius: 5px;
}
.ustensil-keyword-thumb > span{
    display: flex;
}
.close{
    margin-left: 5px;
}
.container{
    display: flex;
}
#before-ingredient, #before-appliance, #before-ustensil{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 10px;
    height: 69px;
    min-width: 170px;
    margin-right: 20px;
    border-radius: 5px;
    font-size: 18px;
    color: white;

}
#before-ingredient{
    background-color: #3282F7;
}
#before-appliance{
    background-color: #68D9A4;
}
#before-ustensil{
    background-color: #ED6454;
}
#after-ingredient, #after-appliance, #after-ustensil{
    display: none;
    flex-direction: column;
    font-size: 18px;
    border-radius: 5px;
    color: white;
    margin-right: 20px;
    padding: 10px;
    height: fit-content;
}
#after-ingredient{
    background-color: #3282F7;
}
#after-appliance{
    background-color: #68D9A4;
}
#after-ustensil{
    background-color: #ED6454;
}
.input{
    display: flex;
    min-width: 130px;
    width: auto;
    height: 49px;
    align-items: center;
    justify-content: space-between;
}
input{
    flex-grow: 1;
    height: 50px;
    border: none;
    background-color: transparent;
}
::placeholder {
    color: rgba(255, 255, 255, 0.674);
  }
#ingredient-keywords, #appliance-keywords, #ustensils-keywords{
    padding: 0;
    margin: 0;
    display: flex;
    max-height: 232px;
    width: 100%;
}
#ingredient-keywords p, #appliance-keywords p, #ustensils-keywords p{
    margin: 0;
    margin-right: 10px;
}
#ingredient-keywords div, #appliance-keywords div, #ustensils-keywords div{
    line-height: 22px;
}

#advanced__Search{
    display: flex;
    position: absolute;
    width: 100%;
    margin: 0 auto;
}
.col-4{
    padding: 0;
}

#recipes{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: 20px auto;
    margin-top: 130px;
    width: 100%;
    height: auto;
}
article{
    display: flex;
    flex-direction: column;
    width: 380px;
    height: 364px;
    margin: 0 0 50px 0;
    background-color: #E7E7E7;
    border-radius: 5px;
    overflow: hidden;
}
.recipe__image{
    height: 50%;
    width: 100%;
    background-color: #C7BEBE;
}
.recipe__info{
    display: flex;
    flex-direction: column;
    height: 50%;
    width: 100%;
    padding: 20px;
}
.recipe__info__top{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 26%;
}
.recipe__info__top--title{
    max-width: 75%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}
.recipe__info__top--time{
    display: flex;
}
li{
    list-style-type: none;
}
.recipe__info__bottom{
    width: 100%;
    height: 74%;
    display: flex;
    flex-grow: 1;
    font-size: 12px;
    line-height: 13px;
}
.recipe__info__bottom ul{
    width: 50%;
    margin: 0;
    padding: 0;
}
.recipe__info__bottom--description{
    width: 50%;
    height: 100%;
    margin: 0;
    text-overflow:ellipsis;
    overflow:hidden;
    display: -webkit-box !important;
    -webkit-line-clamp: 8;
    -webkit-box-orient: vertical;
    white-space: normal;
}
.error{
    font-size: 20px;
    color: #ED6454;
}

